# c_zabawy

./: CMakeLists.txt  main.c
rozdz2/: printfy.c  zad7.c
rozdz4/: zad4.c
rozdz5/: zad1.c  zad2.c
rozdz6/: zad1.c  zad4.c
sem/: cutasstick.c  longest.c  median.c  substrings.c
tests/: CMakeLists.txt  slongest_test.cpp
